[~] Applied suggestions by FindBugs [~] Made the output a bit more readable
Signed-off-by: Uwe Dauernheim <uwe@dauernheim.net>